fixed some layout issues

--- a/client/css/smartphone.css
+++ b/client/css/smartphone.css
@@ -76,7 +76,7 @@ ul.menu,ul.menu li{
 	display:none;
 }
 .modal{
-	width:79%;
+	width:81%;
 }
 .modal:before{
 	width:140%;
