--- a/client/css/smartphoneLandscape.css
+++ b/client/css/smartphoneLandscape.css
@@ -13,3 +13,7 @@
 	font-size:12px;
 	padding:5px;
 }
+.modal{
+        width:90%;
+}
+
